fixed reviews visible when not logged in

--- a/src/assets/styles/components/_chat.scss
+++ b/src/assets/styles/components/_chat.scss
@@ -3,6 +3,7 @@
     margin-bottom: 5px;
     padding: 2px;
     display: block;
+    text-align: left;
 }
 
 .chat .replier{
@@ -10,6 +11,7 @@
     margin-bottom: 5px;
     padding: 2px;
     display: block;
+    text-align: left;
 }
 
 .chat .chat-content div span:last-of-type{
